--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
     "@prisma/client": "^2.18.0",
-    "nodemailer": "^6.5.0",
-    "nodemailer-mock-transport": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
   },
   "devDependencies": {
+    "@nestjs-modules/mailer": "^1.5.1",
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
